# ScoreValidity

./: .gitmodules  2mm-all-choices.txt  2mm-all.py  CMakeLists.txt  LinearModel.csv  LinearModelDB.csv  LinearModelDB2.csv  NonLinearModel.csv  NonLinearModel2.csv  NonLinearModelDB.csv  NonLinearModelDB2.csv  benchmark1.times  benchmark2.times  benchmark3.times  build.sh  dave_and_bronis.py  dave_and_bronis.sh  disassemble.sh  instrumentation.py  instrumentation_0.csv  instrumentation_1.csv  instrumentation_experiment.csv  instrumentation_experiment_model2.csv  intro-example.py  intro-example.times  model_experiments.py  model_experiments.sh  papi.results  results.quartz  run.bsub  run.sh  run2.sh  run3.sh  times.list  visualize.py  weirdness.py  weirdness.results  weirdness.sh  writing.tex
src/: 2mm-all.cpp  2mm-hand.cpp  2mm-lock.cpp  2mm-original.cpp  2mm-right.cpp  2mm.cpp  CMakeLists.txt  benchmark1.cpp  benchmark2.cpp  benchmark3.cpp  dave_and_bronis.cpp  example.cpp  instrumentation.cpp  intro-example.cpp
